# ttsExtension

./: .gitignore  README.md  backend.py  background.js  manifest.json  pyproject.toml  requirements.txt
chromeExtension/: background.js  content.js  manifest.json
src/ttsExtension/: app.py  server.py
