[project]
name = "ttsextension"
version = "0.1.0"
description = ""
authors = [
    { name = "Eric Ji", email = "ericji300@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9,<3.11"

# Tell Poetry to look for the package inside src/
packages = [
    { include = "ttsextension", from = "src" }
]

[tool.poetry.dependencies]
flask = "^2.2.2"
flask-cors = "^5.0.1"
TTS = "^0.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
